tests/unit-fail/j088a.ref
Error: UB-CCV5
Description: Casting empty value to type other than void.
Type: Undefined behavior.
See also: C11 sec. 6.3.2.2:1, J.2:1 item 23
  at f(j088a.c:4)
  at main(j088a.c:4)
  at <file-scope>(<unknown>)
Execution failed (configuration dumped)
