tests/unit-fail/j088a.c
int f(int x){ }

int main(void) {
      f(f(1));
      return 0;
}
